@@ -1,3 +1,7 @@
+2008-10-23  Alexey Shchepin  <alexey@process-one.net>
+
+	* src/ejabberd_frontend_socket.erl: Fixed SSL sockets
+
 2008-10-17  Badlop  <badlop@process-one.net>
 
 	* src/Makefile.in: docdir should be prefixed with DESTDIR (thanks
